# canvas-grader

./: .gitignore  poetry.toml  pyproject.toml
canvas_grader/: __init__.py  cli.py  get_pdfs.py  getsubmissions.py  sent_canvas.py
